# ub-g21-mt

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
ape/: __init__.py
ape/data/: dataset.py  transform.py  types.py
ape/eval/: metrics.py
ape/light/: causal_lm.py
ape/model/: decoders.py  encoders.py  heads.py  mst.py  types.py
ape/modules/: multi_source_attn.py
notebooks/: main.ipynb
